--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="meta gold tiny_meta">Network: <span class="white">!!!NETWORK!!!</span></div>
           <div class="meta gold tiny_meta">Password: <span class="white">!!!PASSWORD!!!</span></div>
           <div class="meta gold tiny_meta">Slides: <span class="white">!!!SLIDEURL!!!</span></div>
-          <div class="meta gold tiny_meta">Project Files: <span class="white">!!!DOWNLOADLINK!!!</span></div>
+          <div class="meta gold tiny_meta">Project Files:<br><span class="white"><a href="https://github.com/gdiminneapolis/building-with-bootstrap-project-files/archive/master.zip">github.com/gdiminneapolis/building-with-bootstrap-project-files/archive/master.zip</a></span></div>
         </div>
       </section><!-- intro -->
 
@@ -120,13 +120,13 @@
       <section>
         <h4 class="gold">Also looks good on a tablet</h4>
         <div class="spacer"></div>
-        <img src="assets/images/iPad.png" alt="The Girl Develop It Minneapolis website as viewed on an iPad.">
+        <img src="assets/images/iPad.png" alt="The Girl Develop It Minneapolis website as viewed on an iPad." style="width: 350px;">
       </section><!-- /gdi tablet -->
 
       <section>
         <h4 class="gold">And rad on a smartphone!</h4>
         <div class="spacer"></div>
-        <img src="assets/images/iPhone.png" alt="The Girl Develop It Minneapolis website as viewed on an iPhone 5.">
+        <img src="assets/images/iPhone.png" alt="The Girl Develop It Minneapolis website as viewed on an iPhone 5." style="width: 250px;">
       </section><!-- /gdi mobile -->
 
       <section>
@@ -137,16 +137,16 @@
 
       <section>
         <h2 class="gold">What comes with Bootstrap?</h2>
-        <p class="fragment">If you haven&rsquo;t already, download the project files by going to <a href="#">!!!PROJECTFILESLINK!!!</a>.</p>
+        <p class="fragment">Open your browser and navigate to<br><a href="http://getbootstrap.com/getting-started/#download">getbootstrap.com/getting-started/#download</a>.</p>
         <hr>
-        <p class="fragment">Unzip the <span class="inline_code">building-with-bootstrap.zip</span> file and move the folder somewhere handy (in a sites folder, on your desktop, etc.).</p>
+        <p class="fragment">Click the <span class="gold">Download Bootstrap</span> button.</p>
         <hr>
-        <p class="fragment">Open Sublime Text, then open your <span class="inline_code">building-with-bootstrap</span> folder.</p>
+        <p class="fragment">Unzip the folder you just downloaded.</p>
       </section><!--- /what comes with bootstrap -->
 
       <section>
-        <p>Find the <span class="inline_code">bootstrap</span> folder within your project directory. Toggle the arrow next to it to reveal its contents. Keep toggling the subfolders until you can see all the files.</p>
-        <img src="assets/images/folder-structure.png" alt="The Bootstrap folder structure" style="width: 300px;" class="fragment">
+        <h5 class="uppercase gold">What comes with Bootstrap?</h5>
+        <img src="assets/images/folder-structure.png" alt="The Bootstrap folder structure" style="width: 300px;"\>
       </section><!--- /bootstrap file structure -->
 
       <section>
@@ -223,6 +223,15 @@
 
       <section>
         <h2 class="gold">See it in action</h2>
+        <p class="fragment">If you haven&rsquo;t already, download the project files by going to<br><a href="https://github.com/gdiminneapolis/building-with-bootstrap-project-files/archive/master.zip">github.com/gdiminneapolis/building-with-bootstrap-project-files/archive/master.zip</a>.</p>
+        <hr>
+        <p class="fragment">Unzip the <span class="inline_code">building-with-bootstrap-project-files-master.zip</span> file and move the folder somewhere handy (in a sites folder, on your desktop, etc.).</p>
+        <hr>
+        <p class="fragment">Open Sublime Text, then open your <span class="inline_code">building-with-bootstrap-project-files-master</span> folder.</p>
+      </section>
+
+      <section>
+        <h2 class="gold">See it in action</h2>
         <p class="fragment big_p">Open up <span class="inline_code">slide-demo/container.html</span> in your browser.</p>
         <p class="fragment big_p">Resize your browser to see where the columns break to fit 100% of the width.</p>
       </section><!-- /container.html -->
@@ -260,6 +269,7 @@
               &lt;/div&gt;
             </code>
           </pre>
+          <p class="meta tiny_meta">Columns stay 50% all the way down to mobile; never break down to 100%.</p>
         </div>
       </section><!-- /2 col-xs-6 -->
 
@@ -291,6 +301,7 @@
               &lt;/div&gt;
             </code>
           </pre>
+          <p class="meta tiny_meta">Columns break down to 100% at 992px.</p>
         </div>
       </section><!-- /4 col-xs-3 -->
 
@@ -301,7 +312,7 @@
       <section>
         <p>Open <span class="inline_code">slide-demo/demo.html</span> in Sublime Text.</p>
         <hr>
-        <p class="fragment">Find <span class="inline_code">bootstrap.css</span> inside the <span class="inline_code">bootstrap/</span> folder we downloaded, and add it to the <span class="inline_code">css/</span> folder.</p>
+        <p class="fragment">Find <span class="inline_code">bootstrap.css</span> inside the <span class="inline_code">bootstrap-3.3.6-dist/</span> folder we downloaded, and add it to the <span class="inline_code">slide-demo/css/</span> folder.</p>
         <hr>
         <p class="fragment">Add it to the <span class="inline_code">head</span> of <span class="inline_ccode">index.html</span>.<br><span class="span meta tiny_meta">Remember to use the relative path!</span></p>
         <div class="fragment">
@@ -422,7 +433,7 @@
       <section>
         <p>Open <span class="inline_code">resume/index.html</span> in Sublime Text.</p>
         <hr>
-        <p class="fragment">Find <span class="inline_code">bootstrap.css</span> inside the <span class="inline_code">bootstrap/</span> folder we downloaded, and add it to the <span class="inline_code">css/</span> folder.</p>
+        <p class="fragment">Find <span class="inline_code">bootstrap.css</span> inside the <span class="inline_code">bootstrap-3.3.6-dist/</span> folder we downloaded, and add it to the <span class="inline_code">resume/css/</span> folder.</p>
         <hr>
         <p class="fragment">Add it to the <span class="inline_code">head</span> of <span class="inline_ccode">index.html</span>.<br><span class="span meta tiny_meta">Remember to use the relative path!</span></p>
         <div class="fragment">
@@ -519,7 +530,7 @@
 
       <section>
         <h2 class="gold">Jumbotron</h2>
-        <p class="fragment">Add a jumptron element after the <span class="inline_code">&lt;nav&gt;</span></p>
+        <p class="fragment">Add a jumbotron element after the <span class="inline_code">&lt;nav&gt;</span></p>
         <hr>
         <p class="fragment">Inside the jumbotron, add a <span class="inline_code">h1</span> with your name, and a paragraph element with your job title.</p>
         <hr>
@@ -561,7 +572,7 @@
         <h2 class="gold">Setting up our sections</h2>
         <p class="fragment">Create a <span class="inline_code">section</span> with a nested <span class="inline_code">.container</span></p>
         <hr>
-        <p class="fragment">Add 2 columns, one with a class of <span class="inline_code">.col-md-3</span> and the other with the class of <span class="inline_code">.col-md-9</span><br><span class="meta tiny_meta">Remember the <span class="inline_code">.row</span>!</span></p>
+        <p class="fragment">Create 2 columns, one that spans 1/4 of the container and and one that spans 3/4 of the container. Both of them should break down to 100% on small devices.<br><span class="meta tiny_meta">Remember the <span class="inline_code">.row</span>!</span></p>
         <hr>
         <div class="fragment">
           <p>Let&rsquo;s add some comments to describe what content we want to put inside each column.</p>
@@ -747,7 +758,7 @@
           <code class="language-markup">
             &lt;footer&gt;
                &lt;div class="container text-center"&gt;
-                 &lt;small&gt;&copy; 2016 Your Name&lt;/small&gt;
+                 &lt;small&gt;&amp;copy; 2016 Your Name&lt;/small&gt;
                &lt;/div&gt;
              &lt;/footer&gt;
           </code>
