--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="spacer"></div>
 
         <div >
-          <div class="meta gold tiny_meta">Network: <span class="white">!!!NETWORK!!!</span></div>
-          <div class="meta gold tiny_meta">Password: <span class="white">!!!PASSWORD!!!</span></div>
+          <div class="meta gold tiny_meta">Network: <span class="white">VTAS-Gues</span></div>
+          <div class="meta gold tiny_meta">Login: <span class="white">Your assigned username and password</span></div>
           <div class="meta gold tiny_meta">Slides:<br><span class="white"><a href="https://gdiminneapolis.github.io/building-with-bootstrap/#/">https://gdiminneapolis.github.io/building-with-bootstrap/#/</a></span></div>
           <div class="meta gold tiny_meta">Project Files:<br><span class="white"><a href="https://github.com/gdiminneapolis/building-with-bootstrap-project-files/archive/master.zip">github.com/gdiminneapolis/building-with-bootstrap-project-files/archive/master.zip</a></span></div>
         </div>
