add max ehrmann quote

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
       </section><!-- /intros -->
 
       <section>
+        <h2 class="gold">Remember!</h2>
+        <div class="fragment">
+          <p class="big_p">You have a right to be here.</p>
+          <p class="meta tiny_meta">&mdash;Max Ehrmann</p>
+        </div>
+      </section>
+
+      <section>
         <h2 class="gold">What we&rsquo;ll be covering today</h2>
         <ul>
           <li class="fragment">Downloading Bootstrap and adding it to an HTML document</li>
