--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <section>
         <h2 class="gold">Remember!</h2>
         <div class="fragment">
-          <p class="big_p">You have a right to be here.</p>
+          <p class="big_p"><i>&ldquo;You have a right to be here.&rdquo;</i></p>
           <p class="meta tiny_meta">&mdash;Max Ehrmann</p>
         </div>
       </section>
