update slide and file links

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div >
           <div class="meta gold tiny_meta">Network: <span class="white">VTAS-Guest</span></div>
           <div class="meta gold tiny_meta">Login: <span class="white">Your assigned username and password</span></div>
-          <div class="meta gold tiny_meta">Slides:<br><span class="white"><a href="https://gdiminneapolis.github.io/building-with-bootstrap/#/">https://gdiminneapolis.github.io/building-with-bootstrap/#/</a></span></div>
-          <div class="meta gold tiny_meta">Project Files:<br><span class="white"><a href="https://github.com/gdiminneapolis/building-with-bootstrap-project-files/archive/master.zip">github.com/gdiminneapolis/building-with-bootstrap-project-files/archive/master.zip</a></span></div>
+          <div class="meta gold tiny_meta">Slides:<br><span class="white"><a href="https://gdiminneapolis.github.io/building-with-bootstrap/#/">gdiminneapolis.github.io/building-with-bootstrap</a></span></div>
+          <div class="meta gold tiny_meta">Project Files:<br><span class="white"><a href="github.com/gdiminneapolis/building-with-bootstrap-project-files/archive/master.zip">github.com/gdiminneapolis/building-with-bootstrap-project-files/archive/master.zip</a></span></div>
         </div>
       </section><!-- intro -->
 
